RESOLVED FIXED89948
[WK2][GTK] Uninitialized variable in TextCheckerGtk.cpp
https://bugs.webkit.org/show_bug.cgi?id=89948
Summary [WK2][GTK] Uninitialized variable in TextCheckerGtk.cpp
Chris Dumez
Reported 2012-06-25 23:31:29 PDT
static bool didInitializeState is not properly initialized in TextChecker::state().
Attachments
Patch (1.21 KB, patch)
2012-06-25 23:33 PDT, Chris Dumez
no flags
Patch (1.22 KB, patch)
2012-06-25 23:35 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-06-25 23:33:03 PDT
Chris Dumez
Comment 2 2012-06-25 23:35:16 PDT
WebKit Review Bot
Comment 3 2012-06-26 00:24:17 PDT
Comment on attachment 149465 [details] Patch Clearing flags on attachment: 149465 Committed r121233: <http://trac.webkit.org/changeset/121233>
WebKit Review Bot
Comment 4 2012-06-26 00:24:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.