[WK2][GTK] Uninitialized variable in TextCheckerGtk.cpp https://bugs.webkit.org/show_bug.cgi?id=89948

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-06-26
Reviewed by Martin Robinson.

Properly initialize didInitializeState in
TextChecker::state().

* UIProcess/gtk/TextCheckerGtk.cpp:
(WebKit::TextChecker::state):

Canonical link: https://commits.webkit.org/107803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121233 268f45cc-cd09-0410-ab3c-d52691b4dbfc